--- a/src/app/employee/employee.component.html
+++ b/src/app/employee/employee.component.html
@@ -131,9 +131,9 @@
       <!--Use of ngx-Bootstrap Button Module component-->
       <div class="btn-group" >
         <label class="btn btn-primary" [(ngModel)]="employee.gender" name="gender"
-                btnRadio="male" tabindex="0" value="male" role="button" #gender="ngModel" required>Male</label>
+                btnRadio="male" tabindex="0" value="male" role="button" #gender="ngModel">Male</label>
         <label class="btn btn-primary" [(ngModel)]="employee.gender" name="gender"
-                btnRadio="female" tabindex="0" value="female" role="button" #gender="ngModel" required>Female</label>
+                btnRadio="female" tabindex="0" value="female" role="button" #gender="ngModel">Female</label>
       </div>
       <!-- <div class="form-check">
         <input
